# 3D-wolz

./: CMakeLists.txt  README.md  readme.MD
src/: array.h  display.c  display.h  light.h  main.c  matrix.c  matrix.h  mesh.c  mesh.h  raindrop.c  raindrop.h  texture.c  texture.h  triangle.c  triangle.h  vector.c  vector.h
